--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="menuNav">
             <h1>Pokédex</h1>
             <ul>
-                <li><a href="#inicio">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#pokedex">Pokédex</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
